# fin-lab-x

./: .dockerignore  .git-blame-ignore-revs  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  EVAL_DATASET_DESIGN.md  FILE_STRUCTURE.md  PRD.md  README.md  TASK_WALKTHROUGH.md  do-i-understand-multi-provider-streaming-reasoning.html  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/agent_engine/: CLAUDE.md  README.md
backend/agent_engine/agents/: README.md  __init__.py  base.py  config_loader.py
backend/agent_engine/core/: state.py
backend/agent_engine/docs/: sec_core.md  streaming_observability_guardrails.md  unified_observability_strategy_streaming.md
backend/agent_engine/observability/: README.md  __init__.py  langsmith_tracer.py
backend/agent_engine/orchestrator/: __init__.py  base.py
backend/agent_engine/skills/: __init__.py
backend/agent_engine/streaming/: README.md  __init__.py  domain_events_schema.py  event_mapper.py  reasoning_segmenter.py  reasoning_trace_callback.py  sse_serializer.py  tool_error_sanitizer.py
backend/agent_engine/tools/: README.md  __init__.py  base.py  financial.py  finnhub_client.py  finnhub_tools.py  news_search.py  registry.py  sec.py  sec_filing.py  sec_filing_tools.py
backend/agent_engine/utils/: README.md  model_context.py  model_context_registry.yaml
backend/agent_engine/workflows/: README.md  config_loader.py
backend/ai_engine/agents/: factory.py
backend/ai_engine/core/: memory.py
backend/ai_engine/services/: guardrails.py  llm_service.py
backend/api/: README.md  dependencies.py  main.py
backend/api/routers/: README.md  __init__.py  chat.py  chat_invoke.py
backend/common/: README.md  __init__.py  sec_core.md  sec_core.py
backend/evals/: ARCHITECTURE.md  README.md  braintrust_config.yaml  conftest.py  dataset_loader.py  eval_helpers.py  eval_runner.py  eval_spec_schema.py  eval_tasks.py  scenario_config.py  scorer_registry.py  test_language_policy.py
backend/evals/datasets/: README.md  language_policy.py
backend/evals/diagnostic/: __init__.py  annotation_export_joiner.py  compare_guard.py  dataset_selector.py  execution_scorer.py  langfuse_annotation_setup.py  metadata_projector.py  models.py  run_manifest_writer.py
backend/evals/results/: near_v1_diagnostic_20260424_174519_069251.csv  near_v1_diagnostic_20260424_181905_596447.csv  near_v1_diagnostic_run_manifest_20260424_195731_585821.csv  rag_filter_naive_20260513_082006_625583.csv  rag_filter_naive_20260513_083911_188989.csv  rag_filter_naive_20260513_102531_168386.csv  rag_filter_three_layer_20260513_081935_657577.csv  rag_filter_three_layer_20260513_083846_728587.csv  rag_filter_three_layer_20260513_102503_235589.csv
backend/evals/scorers/: README.md  __init__.py  language_policy_scorer.py  sec_retrieval_scorer.py  ticker_precision_scorer.py
backend/ingestion/fundamentals_pipeline/: README.md  errors.py  ingestion_run_tracker.py  retry.py  ticker_universe_loader.py
backend/ingestion/quant_data_pipeline/: README.md  __main__.py  calendar_to_fiscal_period.py  ingestion_run_tracker.py  quant_ingestion_runs.py  quant_pipeline_errors.py  quant_retry.py  ticker_universe_loader.py
backend/ingestion/sec_dense_pipeline/: README.md  collection_schema.py  common.py  retriever.py  tracing.py  vectorizer.py
backend/ingestion/sec_filing_pipeline/: README.md  __init__.py  __main__.py  filing_models.py  filing_store.py  html_preprocessor.py  html_to_md_converter.py  markdown_cleaner.py  pipeline.py  sec_downloader.py  sec_heading_promoter.py
backend/scripts/: README.md  dump_retrieval_diff.py  embed_sec_filings.py  refresh_model_context_registry.py  setup_naive_collection.py  spotcheck_is_stub_section.py  validate_sec_eval_dataset.py  validate_sec_md_cleanup.py  verify_v1_naive.py
backend/scripts/research/: check_filing_markdown.py  h3_dump_per_ticker.py  h3_h4_combined_probe.py  markdown_h3_cross_sector.py  markdown_subheading_inventory.py  prelude_block_relationship.py  prelude_dump_raw.py  prelude_inspect_specific.py  subsection_structure_probe.py
backend/scripts/validation/: README.md  (+3 more)
backend/tests/: conftest.py  test_braintrust_handler_leak_guard.py  test_langfuse_integration.py
backend/utils/: span_tracing.py
docs/: README.md  (+11 more)
(+506 files in other folders)
