[project]
name = "finlab-x-backend"
version = "0.1.0"
description = "FinLab-X backend services and AI engine"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "edgartools>=5.17.1",
    "fastapi>=0.115.0",
    "html-to-markdown>=3.0.2,<4.0.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langfuse>=4.0.0",
    "langgraph>=0.5.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "markdownify>=1.2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "tavily-python>=0.7.21",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "autoevals>=0.1.0",
    "braintrust>=0.11.0",
    "braintrust-langchain>=0.2.1",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "eval: evaluation tests that hit real LLM APIs",
    "sec_integration: SEC integration tests that hit real SEC EDGAR APIs",
]
addopts = "-m 'not eval and not sec_integration'"

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
