[project]
name = "finlab-x-backend"
version = "0.1.0"
description = "FinLab-X backend services and AI engine"
requires-python = ">=3.10"
dependencies = [
    "edgartools>=5.17.1",
    "fastapi>=0.115.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "pyyaml>=6.0.2",
    "tavily-python>=0.7.21",
    "yfinance>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88
